feat: update satzung, images, mdx convert

--- a/src/pages/impressum.mdx
+++ b/src/pages/impressum.mdx
@@ -8,15 +8,16 @@ Förderverein des Evangelischen Kindergartens "Das Baumhaus" Großsachsen e.V.
 
 ## Website
 
-Dieses Impressum gilt für alle Angebote unter der Domain foerderverein-baumhaus.de
-inklusive aller Subdomains (Unterseiten).
+Dieses Impressum gilt für alle Angebote unter der Domain
+"foerderverein-baumhaus.de" inklusive aller Subdomains und Unterseiten.
 
 ## Soziale Medien
 
-Dieses Impressum gilt auch für unsere Auftritte in den folgenden sozialen Medien:
+Dieses Impressum gilt auch für unsere Auftritte in den folgenden sozialen
+Medien:
 
 - Facebook
 - Instagram
 - YouTube
 
-Angaben gemäß §5 TMG
+Angaben gemäß §5 TMG.
