--- a/src/pages/satzung.mdx
+++ b/src/pages/satzung.mdx
@@ -6,32 +6,32 @@ layout: ../layouts/Layout.astro
 
 Der Verein führt den Namen Förderverein des Evangelischen Kindergartens -Das
 Baumhaus- Großsachsen. Nach Eintragung in das Vereinsregister beim Amtsgericht
-Weinheim erhält er den Zusatz „eingetragener Verein" (e.V.). Er hat seinen Sitz
-in 69493 Hirschberg, Ortsteil Grossachsen. Geschäftsjahr ist das Kalenderjahr.
+Weinheim erhält er den Zusatz „eingetragener Verein“ (e.V.). Er hat seinen Sitz
+in 69493 Hirschberg, Ortsteil Großsachsen. Geschäftsjahr ist das Kalenderjahr.
 
 ## §2 Vereinszweck, Gemeinnützigkeit
 
 Der Zweck des Vereins ist die Förderung der pädagogischen Arbeit des
-Evangelischen Kindergartens -Das Baumhaus- Großsachsen durch die idee und
-Finanzielle Förderung. Der Satzungszweck wird verwirklicht insbesondere durch
-die Beschaffung von Mitteln durch Beiträge, Spenden, sowie: Erlöse aus
-Veranstaltungen. Mit den beschafften Mitteln soll pädagogisches Spielmaterial
-und Lehrmittel angeschafft werden, die Gestaltung und Renovierung einzelner
-Bereiche des Kindergartens unterstützt und eine Elternzeitschrift (genannt
-finanziert werden. Dies erfolgt in enger Zusammenarbeit mit Derung. Elternbeirat
-wed Träger des Kindergartens. Dabei soll sich der Verein besonders für die
-Förderung solcher Projekte einsetzen, die pädagogisch sinnvoll sind, im
-Paichtkatalog des Trägers allerdings nicht erfasst sind. Der Verein ist
-seibstlos tätig; er verfolgt nicht in erster Linie eigenwirtschaftliche Zwecke.
-Mittel des Vereins dürfen nur für den satzungsgemäßen Zweck verwendet werden.
-Die Mitglieder erhalten keine Gewinnanteile und in Ihrer Eigenschaft als
+Evangelischen Kindergartens -Das Baumhaus- Großsachsen durch die ideelle und
+finanzielle Förderung. Der Satzungszweck wird verwirklicht insbesondere durch
+die Beschaffung von Mitteln durch Beiträge, freiwillige Spenden, sowie Erlöse
+aus Veranstaltungen. Mit den beschafften Mitteln soll pädagogisches
+Spielmaterial und Lehrmittel angeschafft werden, die Gestaltung und Renovierung
+einzelner Bereiche des Kindergartens unterstützt und eine Elternzeitschrift
+(genannt Elternpost) finanziert werden. Dies erfolgt in enger Zusammenarbeit mit
+Leitung, Elternbeirat und Träger des Kindergartens. Dabei soll sich der Verein
+besonders für die Förderung solcher Projekte einsetzen, die pädagogisch sinnvoll
+sind, im Pflichtkatalog des Trägers allerdings nicht erfasst sind. Der Verein
+ist selbstlos tätig; er verfolgt nicht in erster Linie eigenwirtschaftliche
+Zwecke. Mittel des Vereins dürfen nur für den satzungsgemäßen Zweck verwendet
+werden. Die Mitglieder erhalten keine Gewinnanteile und in Ihrer Eigenschaft als
 Mitglieder auch keine sonstigen Zuwendungen aus Mitteln des Vereins. Sie
-erhalten bei Ihrem Ausscheiden oder bei Aufösung des Vereins für Ihre
+erhalten bei Ihrem Ausscheiden oder bei Auflösung des Vereins für Ihre
 Mitgliedschaft keinerlei Entschädigung. Es darf keine Person durch Ausgaben, die
 dem Zweck des Vereins fremd sind, oder durch unverhältnismäßig hohe Vergütung
 begünstigt werden. Die Vereinsämter sind Ehrenämter. Der Verein verfolgt
-ausschließlich gemeinnützige Zwecke im Sinne des Abschnitts: steuerbegünstigte
-Zwecke der Abgabeordnung ($51 ff AO). Er ist ein Förderverein im Sinne von § 58
+ausschließlich gemeinnützige Zwecke im Sinne des Abschnitts; steuerbegünstigte
+Zwecke der Abgabeordnung (§51 ff AO). Er ist ein Förderverein im Sinne von § 58
 Nr. 1 AO, der seine Mittel ausschließlich zur Förderung o. g. steuerbegünstigter
 Zwecke verwendet.
 
@@ -44,11 +44,11 @@ Bewerberin auch die Satzung an.
 
 ## §4 Beendigung der Mitgliedschaft
 
-Der Austritt aus dem Verein ist unter Einhaltung einer Kündigungsfrist von dr
-hres zulässig. Der Austritt erfolgt schriftlich. Gezahlte Beitrage werden nicht
-erstattet. Ein Mitglied kann aus dem Verein ausgeschlossen werden, wenn sein
-Verhalten in grober Weise gegen die Interessen des Vereins verstößt. Über den
-Ausschluss entscheidet der Vorstand.
+Der Austritt aus dem Verein ist unter Einhaltung einer Kündigungsfrist von drei
+Monaten zum Ende des Geschäftsjahres zulässig. Der Austritt erfolgt schriftlich.
+Gezahlte Beiträge werden nicht erstattet. Ein Mitglied kann aus dem Verein
+ausgeschlossen werden, wenn sein Verhalten in grober Weise gegen die Interessen
+des Vereins verstößt. Über den Ausschluss entscheidet der Vorstand.
 
 ## §5 Beitrag
 
@@ -62,39 +62,70 @@ Organe des Vereins sind der Vorstand und die Mitgliederversammlung.
 
 ## §7 Vorstand
 
-Der Vorstand besteht aus dem a Schriftführer, Kassenwart, 1. Vorsitzenden und 2.
-Vorsitzendem. Der Vorstand wird von der Mitgliederversammlung auf Dauer von zwei
+Der Vorstand besteht aus dem 1. Vorsitzenden, 2. Vorsitzendem, Schriftführer,
+Kassenwart. Der Vorstand wird von der Mitgliederversammlung auf Dauer von zwei
 Jahren gewählt. Er bleibt jedoch bis zur Wahl eines neuen Vorstandes im Amt.
 Scheidet ein Vorstandmitglied vorzeitig aus dem Amt aus, ist der Restvorstand
 befugt, bis zur Neuwahl durch die nächste Mitgliederversammlung den Vorstand zu
-ergänzen.
-
-Der Verein ist Vorsitzenden gerichtlich und außergerichtlich (526 BGB) vom ist
-und i-vom Vorstezenden Vorsteenecunesberechdts Im fenverhatenls wird bestimme.
-dass der 2 beretzende nur bel Verhinderung des de Vorstenden zur Vertretung
-Sercheet IS. Der Vorstand ur beschussat, wenn mindestens drel lemberechtigte
-Vorstandsmitleder anwesend sind. Beschlüsse werden Stimmengleichheit
-Stimerracher Metrhete der erschlenenen Vorstandsmteiedern gefesst. Bet
-entscheidet Sitzungsleiter/in. zu Vorstandssitzungen können Berater
-themenbezogen eingeladen werden. Der Vorstand führe die laufenden Ger chemee des
-Vereins. Er verwaltet das Vermögen des Vereines im Sinne von 52 der Satzung. Die
-Arbeit des Vorstandes ist ehrenamelich und wird nicht vergütet. Der Vorstezende
-lädt zu Sitzungen des Vorstandes ein.
+ergänzen. Der Verein ist gerichtlich und außergerichtlich (§26 BGB) vom 1.
+Vorsitzenden und vom 2. Vorsitzenden vertreten. Jeder ist
+alleinvertretungsberechtigt. Im Innenverhältnis wird bestimmt, dass der 2.
+Vorsitzende nur bei Verhinderung des 1. Vorsitzenden zur Vertretung berechtigt
+ist. Der Vorstand ist beschlussfähig, wenn mindestens drei stimmberechtigte
+Vorstandsmitglieder anwesend sind. Beschlüsse werden mit einfacher Mehrheit der
+erschienenen Vorstandsmitgliedern gefasst. Bei Stimmengleichheit entscheidet
+der/die Sitzungsleiter/in. Zu Vorstandssitzungen können Berater themenbezogen
+eingeladen werden. Der Vorstand führt die laufenden Geschäfte des Vereins. Er
+verwaltet das Vermögen des Vereines im Sinne von §2 der Satzung. Die Arbeit des
+Vorstandes ist ehrenamtlich und wird nicht vergütet. Der Vorsitzende lädt zu
+Sitzungen des Vorstandes ein.
 
 ## §8 Mitgliederversammlung
 
-Die Migliederversammlung tritt einmal im Jahr zusammén. Der Vorstand lädt hierzu
-spätestens zwei Wochen vor dem Versammlungstermin schriftlich ein. Eine
+Die Mitgliederversammlung tritt einmal im Jahr zusammen. Der Vorstand lädt
+hierzu spätestens zwei Wochen vor dem Versammlungstermin schriftlich ein. Eine
 Mitgliederversammlung ist ferner einzuberufen, wenn das Interesse des Vereins
 dies erfordert oder wenn die Einberufung von einem Fünftel der Mitglieder
-sChriftlich unter Angabe des Zwecks und der Gründe vom Vorstand Verlangt wird.
+schriftlich unter Angabe des Zwecks und der Gründe vom Vorstand verlangt wird.
 Jede ordnungsgemäß einberufene Mitgliederversammlung ist ohne Rücksicht auf die
-Zahl der erschienenen Mitglieder beschlussfähig. Die Mitgliederversammlung Wird
-Vorsitzenden, bei seiner Verhinderung vom 2. Vorsitzenden geleitet. Ist auch
-dieser verhindert, bestellt die Versammlungsleiter. Die Mitgliederversammlung
-Beschlussfassung erfolgt mit einfacher Stimmenmehrheit der Erschienenen.
-Stimmengleichheit gilt als Ablehnung. Die Aufgaben der Mitgliederversammlung
-sind insbesondere: Entgegennahme des Jahresberichtes Entgegennahme des
-Kassenberichtes Wahl des Vorstandes Entlastung des Vorstandes Wahl der beiden
-Kassenprüfer Festsetzung des Mitgliedsbeitrages Beschlussfassung über die
-Berufung eines Mitglieds gegen seinen Ausschluss durch den Vorstand.
+Zahl der erschienenen Mitglieder beschlussfähig. Die Mitgliederversammlung wird
+vom 1. Vorsitzenden, bei seiner Verhinderung vom 2. Vorsitzenden geleitet. Ist
+auch dieser verhindert, bestellt die Mitgliederversammlung einen
+Versammlungsleiter. Die Beschlussfassung erfolgt mit einfacher Stimmenmehrheit
+der Erschienenen. Stimmengleichheit gilt als Ablehnung. Die Aufgaben der
+Mitgliederversammlung sind insbesondere: Entgegennahme des Jahresberichtes
+Entgegennahme des Kassenberichtes Wahl des Vorstandes Entlastung des Vorstandes
+Wahl der beiden Kassenprüfer Festsetzung des Mitgliedsbeitrages Beschlussfassung
+über die Berufung eines Mitglieds gegen seinen Ausschluss durch den Vorstand
+
+## §9 Beurkundung
+
+Über den Verlauf der Vorstandssitzungen und Mitgliederversammlungen ist eine
+Niederschrift anzufertigen, die vom Versammlungsleiter und vom Schriftführer zu
+unterzeichnen ist.
+
+## §10 Satzungsänderung
+
+Satzungsänderungen bedürfen der Mehrheit von zwei Dritteln der anwesenden
+Mitgliedern. Zur Änderung des Vereinszwecks ist die Mehrheit von neun Zehnteln
+aller Mitgliedern erforderlich.
+
+## §11 Auflösung des Vereins
+
+Die Auflösung des Vereins kann nur in einer eigens zu diesem Zweck einberufenen
+Mitgliederversammlung mit einer Mehrheit von zwei Dritteln der abgegebenen
+Stimmen beschlossen werden. Bei Auflösung des Vereins/Wegfall steuerbegünstigter
+Zwecke fällt das verbleibende Vermögen der in §2 Satz 1 der Satzung genannten
+Einrichtung an den Träger des Kindergarten, mit der Auflage, das Vermögen im
+Sinne des Vereinszwecks für den Evangelischen Kindergarten -Das Baumhaus-
+Großsachsen unmittelbar und ausschließlich zu verwenden. Besteht der
+Kindergarten nicht mehr, kann der Verein das Vermögen an andere
+steuerbegünstigte Einrichtungen oder eine Körperschaft des öffentlichen Rechts
+zur Verwirklichung steuerbegünstigter Zwecke überweisen (Alternative in diesem
+Fall: Beschlüsse über die künftige Verwendung des Vermögens dürfen erst nach
+Einwilligung des Finanzamtes ausgeführt werden). Bei Auflösung des
+Vereins/Wegfall steuerbegünstigter Zwecke erfolgt die Liquidation durch die zum
+Zeitpunkt des Auflösungsbeschlusses amtierenden Vorstandsmitgliedern. Die
+vorstehende Satzung wurde in der Gründungsversammlung vom 23. März 2005
+beschlossen. Sie tritt mir Eintragung in das Vereinsregister beim Amtsgericht
+Weinheim in Kraft.
