fix: line wrap address

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -57,7 +57,8 @@ an den Förderverein sind steuerlich absetzbar.
 
 ## Der Kindergarten
 
-Hönigstraße 10 69493 Hirschberg-Großsachsen
+Hönigstraße 10<br/>
+69493 Hirschberg-Großsachsen
 
 - Telefon: 06201-53756
 - E-Mail:
