feat: added register

--- a/src/pages/impressum.mdx
+++ b/src/pages/impressum.mdx
@@ -6,6 +6,11 @@ layout: ../layouts/Layout.astro
 
 Förderverein des Evangelischen Kindergartens "Das Baumhaus" Großsachsen e.V.
 
+## Register
+
+Registriert im Vereinsregister des Amtsgerichts Mannheim. Nummer des Vereins:
+VR 430970.
+
 ## Website
 
 Dieses Impressum gilt für alle Angebote unter der Domain
