feat: updated colors/logos

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,13 +6,6 @@ import { Image } from "astro:assets"
 import team from "../assets/team.svg"
 import ibanSpende from "../assets/iban-spende.png"
 
-<Image
-  src={team}
-  alt="Team vom Förderverein - Illustration"
-
-style={{ marginInline: "auto", marginBlock: "2rem", maxWidth: "60%", height:"auto" }}
-/>
-
 # Förderverein "Das Baumhaus"
 
 Ziel des Fördervereins ist es, die konzeptionelle Ausrichtung des evangelischen
@@ -29,6 +22,10 @@ tatkräftige Unterstützung bei den einzelnen Projekten.
 ## Projekte
 
 Aktuelle Projekte entnehmen Sie bitte dem Aushang im Kindergarten.
+
+## Kontakt
+
+- [Mail an den Vorstand](mailto:info@foerderverein-baumhaus.de)
 
 ## Ansprechpartner
 
@@ -57,8 +54,7 @@ an den Förderverein sind steuerlich absetzbar.
 
 ## Der Kindergarten
 
-Hönigstraße 10<br/>
-69493 Hirschberg-Großsachsen
+Hönigstraße 10<br/> 69493 Hirschberg-Großsachsen
 
 - Telefon: 06201-53756
 - E-Mail:
