fix: updated schriftführer + added paypal spende

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,6 +6,7 @@ layout: ../layouts/Layout.astro
 import { Image } from "astro:assets"
 import team from "../assets/team.svg"
 import ibanSpende from "../assets/iban-spende.png"
+import paypalSpende from "../assets/paypal-spende.jpeg"
 
 # Förderverein "Das Baumhaus"
 
@@ -34,20 +35,27 @@ Aktuelle Projekte entnehmen Sie bitte dem Aushang im Kindergarten.
   [Sebastian Werner](mailto:s.werner@foerderverein-baumhaus.de)
 - 2\. Vorsitzende: [Kathrin Ternes](mailto:k.ternes@foerderverein-baumhaus.de)
 - Kassenwart: [Marion Sebastian](mailto:m.sebastian@foerderverein-baumhaus.de)
-- Schriftführer:
-  [Dominik Frommherz](mailto:d.frommherz@foerderverein-baumhaus.de)
+- Schriftführer: [Britta Götz](mailto:b.goetz@foerderverein-baumhaus.de)
 
 ## Bankverbindung
 
 <Image
   alt="QR-Code für Banküberweisung"
   src={ibanSpende}
-  style={{ alignSelf: "start", maxWidth: "40%", height: "auto" }}
+  style={{ maxWidth: "30%", height: "auto" }}
 />
 
 - Bank: Volksbank Kurpfalz
 - IBAN: DE29 6729 0100 0061 2265 08
 - BIC: GENODE61HD3
+
+<Image
+  alt="QR-Code für PayPal-Spende"
+  src={paypalSpende}
+  style={{ maxWidth: "30%", height: "auto" }}
+/>
+
+[PayPal Spende](https://paypal.me/foerderbaumhaus)
 
 Selbstverständlich nehmen wir auch Spenden entgegen. Als gemeinnützig
 anerkannter Verein stellen wir hierfür gerne eine Spendenquittung aus. Spenden
